--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mocking_test
-description: A new Flutter project.
+description: Demo app of how to provide mock data to widgets
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -35,10 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http_mock_adapter: ^0.4.4
   dio: ^5.3.2
+  provider: ^6.0.5
+  json_annotation: ^4.8.1
 
 dev_dependencies:
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.0
   flutter_test:
     sdk: flutter
 
@@ -64,6 +67,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - config.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
